Sun Nov 20 23:02:10 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* variables.c, variables.h (c_gbl, c_lcl, c_set): Drop doLowerCase
	parameter.
	* decode.c: Follow c_gbl, c_lcl, c_set parameter change.

Sun Nov 20 22:40:21 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/lowercase.s: Add.
	* common.h: Add.
	* lex.c (Lex_MakeLocalLabel): Make use of UNUSED.
	* help_cop.c (DestMem_RelocUpdaterCoPro): Likewise.
	* m_cpumem.c (DestMem_RelocUpdater): Likewise.
	* commands.c, commands.h, decode.c, m_cpuctrl.c, m_cop.c, m_cpuctrl.h,
	m_cpumem.c, m_cop.h, m_cpumem.h, option.c, variables.c, option.h,
	variables.h, m_fpe.c, m_fpe.h, m_copmem.c, m_copmem.h, m_cpu.c,
	m_cpu.h: Add support for lowercase instruction mnemonics.

Tue Nov 15 22:31:06 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/decode.s: Enhance.
	* symbol.c (symbolPrint): Output defining area and code size.
	* variables.c (c_lcl): Reset defining area and code size.

Tue Nov 15 20:37:49 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* decode.c (decode): Don't give warning on unsupported local labels
	when it concerns a macro.

Mon Nov 14 23:20:43 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/local_label.s: Enhance.
	* symbol.c (Symbol_CreateSymbolOut): Make missing local label an
	abort error to avoid an assert going off later.
	* decode.c (decode): Define local lable before trying to parse
	the mnemonic.

Sun Nov 13 18:33:56 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/include/predef_reg_test.s: Add test on v8.
	* regression/tests_pass/apcs-none.s: Update reference.
	* regression/tests_pass/apcs-3-reentrant.s: Likewise.
	* regression/tests_pass/apcs-3.s: Likewise.
	* regression/tests_pass/apcs-3-reentrant-noswstackcheck.s: Likewise.
	* regression/tests_pass/apcs-3-nofp.s: Add.
	* symbol.c (Symbol_Init): When a nofp APCS flavour is selected, don't
	define fp but define v8 instead.
